BusGraph/kubernates/springboot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service-617e7b8a-c73e-4b6c-a7f9-865396639a19
  namespace: 3219e62e-f28c-4e9a-b62e-77aae69fb44b
spec:
  selector:
    app: springboot-app-617e7b8a-c73e-4b6c-a7f9-865396639a19
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
  type: ClusterIP
