BusGraph/kubernates/springboot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress-71245cd8-bb0a-47b7-90a3-b8a85054caf7
  namespace: 3219e62e-f28c-4e9a-b62e-77aae69fb44b
  labels:
    app: springboot-app-71245cd8-bb0a-47b7-90a3-b8a85054caf7
spec:
  ingressClassName: nginx
  rules:
    - host: app-iszrld.zd46w0.us-east-2.febe.k8s
      http:
        paths:
          - backend:
              service:
                name: springboot-service-71245cd8-bb0a-47b7-90a3-b8a85054caf7
                port:
                  number: 80
            path: /graphiql
            pathType: Prefix
          - backend:
              service:
                name: springboot-service-71245cd8-bb0a-47b7-90a3-b8a85054caf7
                port:
                  number: 80
            path: /graphql
            pathType: Prefix
